--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.1",
     "@popperjs/core": "^2.11.5",
     "@vuepic/vue-datepicker": "^3.3.1",
+    "@vueup/vue-quill": "^1.0.0-beta.9",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
